Quelques modification au niveau design (scroll horizontale/texte à aligner) - Card et Slideshow :bug:

--- a/Kasa/src/sass/abstracts/_body.scss
+++ b/Kasa/src/sass/abstracts/_body.scss
@@ -8,7 +8,7 @@ body {
 
 .main-container {
   width: 100%;
-  max-width: 1700px;
+  max-width: 1500px;
   margin: 0 auto;
   box-sizing: border-box;
 
