--- a/Kasa/src/sass/main.css
+++ b/Kasa/src/sass/main.css
@@ -10,7 +10,7 @@ body {
 
 .main-container {
   width: 100%;
-  max-width: 1700px;
+  max-width: 1500px;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -69,43 +69,63 @@ a {
     text-transform: uppercase;
   }
 }
-.banner_img {
+.Banner_container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+.Banner_container .banner_img {
   padding: 45px;
-  height: 60vh;
+  height: 350px;
   width: 100%;
   position: relative;
   object-fit: cover;
   border-radius: 70px;
   filter: brightness(0.54);
 }
-
-.banner_text h1 {
-  font-weight: 700;
-  font-family: "Montserrat", sans-serif;
+.Banner_container .banner_text {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Banner_container .banner_text h1 {
   font-size: 40px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   color: rgb(255, 255, 255);
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   filter: drop-shadow(2px 4px 6px rgb(0, 0, 0));
+  text-align: center;
 }
 
 @media screen and (max-width: 375px) {
   .Banner_container {
     margin-top: -40px;
-    width: 425px;
+    width: 113%;
     margin-left: -20px;
+    position: relative;
   }
   .Banner_container .banner_img {
-    height: 37vh;
+    height: 200px;
     border-radius: 60px;
   }
+  .Banner_container .banner_text {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 55px;
+    text-align: left;
+    width: 100%;
+    height: 100%;
+  }
   .Banner_container .banner_text h1 {
-    font-size: 25px;
-    position: absolute;
-    width: 243px;
-    top: 30%;
+    font-size: 20px;
+    max-width: 196px;
+    text-align: left;
   }
 }
 .container_box {
@@ -140,7 +160,7 @@ a {
   bottom: 70px;
   font-size: 18px;
   font-weight: 700;
-  width: 50%;
+  width: 57%;
   line-height: 30px;
 }
 
@@ -158,6 +178,8 @@ a {
     filter: brightness(0.9);
   }
   .DisplayCard .textTitle {
+    width: 80%;
+    left: 0px;
     bottom: 85px;
     line-height: 40px;
   }
